syntax = "proto3";

package account;

option go_package = "proto;account";

service Account {
	rpc Call(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
	rpc Register(AccountInfo) returns (AccountResponse) {}
	rpc Authenticate(AccountInfo) returns (AccountResponse) {}
	rpc UpdateAccount(NewAccountInfo) returns (AccountResponse) {}
}

message AccountInfo {
	string email = 1;
	string password = 2;
}

message NewAccountInfo {
	string email = 1;
	string password = 2;
}

message AccountResponse {
	uint32 statusCode = 1;
	string JWTtoken = 2;
}

message Message {
	string say = 1;
}

message Request {
	string name = 1;
}

message Response {
	string msg = 1;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
